writerfilter/source/dmapper/GraphicHelpers.cxx
@@ -324,6 +324,53 @@ sal_Int32 GraphicZOrderHelper::findZOrder( sal_Int32 relativeHeight, bool bOldSt
     return 0; // this should not(?) happen
 }
 
+ExtentHandler::ExtentHandler()
+{
+}
+
+ExtentHandler::~ExtentHandler()
+{
+}
+
+void ExtentHandler::attribute(Id nName, Value & rValue)
+{
+    sal_Int32 nIntValue = rValue.getInt();
+    switch (nName)
+    {
+        case NS_ooxml::LN_CT_PositiveSize2D_cx:
+        {
+            m_Extent.Width = nIntValue;
+        }
+        break;
+        case NS_ooxml::LN_CT_PositiveSize2D_cy:
+        {
+            m_Extent.Height = nIntValue;
+        }
+        break;
+        default:
+        break;
+    }
+}
+
+void ExtentHandler::sprm(Sprm & rSprm)
+{
+    sal_uInt32 nSprmId = rSprm.getId();
+    switch(nSprmId)
+    {
+        case NS_ooxml::LN_CT_Inline_extent:
+        case NS_ooxml::LN_CT_Anchor_extent:
+        {
+            writerfilter::Reference<Properties>::Pointer_t pProperties = rSprm.getProps();
+            if( pProperties )
+            {
+                pProperties->resolve(*this);
+            }
+        }
+        break;
+        default:
+        break;
+    }
+}
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
